impl(bigtable): make endpoint options internal (#15856)
* impl(bigtable): make endpoint options internal

--- a/google/cloud/bigtable/CMakeLists.txt
+++ b/google/cloud/bigtable/CMakeLists.txt
@@ -188,6 +188,7 @@ add_library(
     internal/default_row_reader.h
     internal/defaults.cc
     internal/defaults.h
+    internal/endpoint_options.h
     internal/google_bytes_traits.cc
     internal/google_bytes_traits.h
     internal/logging_result_set_reader.cc
