--- a/google/cloud/datacatalog/CMakeLists.txt
+++ b/google/cloud/datacatalog/CMakeLists.txt
@@ -17,7 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(datacatalog "Google Cloud Data Catalog API"
-                                   SERVICE_DIRS "__EMPTY__" "lineage/v1/" "v1/")
+                                   SERVICE_DIRS "lineage/v1/" "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(datacatalog_quickstart "quickstart/quickstart.cc")
