--- a/google/cloud/billing/CMakeLists.txt
+++ b/google/cloud/billing/CMakeLists.txt
@@ -17,7 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(billing "Cloud Billing Budget API"
-                                   SERVICE_DIRS "__EMPTY__" "budgets/v1/" "v1/")
+                                   SERVICE_DIRS "budgets/v1/" "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(billing_quickstart "quickstart/quickstart.cc")
