--- a/google/cloud/cloudbuild/CMakeLists.txt
+++ b/google/cloud/cloudbuild/CMakeLists.txt
@@ -17,7 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(cloudbuild "Cloud Build API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/" "v2/")
+                                   SERVICE_DIRS "v1/" "v2/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(cloudbuild_quickstart "quickstart/quickstart.cc")
