--- a/google/cloud/logging/CMakeLists.txt
+++ b/google/cloud/logging/CMakeLists.txt
@@ -18,7 +18,7 @@ include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
     logging "Cloud Logging API"
-    SERVICE_DIRS "__EMPTY__" "v2/"
+    SERVICE_DIRS "v2/"
     SHARED_PROTO_DEPS "logging_type"
     BACKWARDS_COMPAT_PROTO_TARGETS "logging_type_type_protos")
 
