--- a/google/cloud/managedidentities/CMakeLists.txt
+++ b/google/cloud/managedidentities/CMakeLists.txt
@@ -18,7 +18,7 @@ include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
     managedidentities "Managed Service for Microsoft Active Directory API"
-    SERVICE_DIRS "__EMPTY__" "v1/")
+    SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(managedidentities_quickstart "quickstart/quickstart.cc")
