--- a/google/cloud/policytroubleshooter/CMakeLists.txt
+++ b/google/cloud/policytroubleshooter/CMakeLists.txt
@@ -18,7 +18,7 @@ include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
     policytroubleshooter "Policy Troubleshooter API"
-    SERVICE_DIRS "__EMPTY__" "v1/" "iam/v3/"
+    SERVICE_DIRS "v1/" "iam/v3/"
     SHARED_PROTO_DEPS "iam_v2")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
