--- a/google/cloud/speech/CMakeLists.txt
+++ b/google/cloud/speech/CMakeLists.txt
@@ -18,7 +18,7 @@ include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
     speech "Cloud Speech-to-Text API"
-    SERVICE_DIRS "__EMPTY__" "v1/" "v2/"
+    SERVICE_DIRS "v1/" "v2/"
     BACKWARDS_COMPAT_PROTO_TARGETS "cloud_speech_protos")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
