--- a/google/cloud/webrisk/CMakeLists.txt
+++ b/google/cloud/webrisk/CMakeLists.txt
@@ -28,8 +28,7 @@ endif ()
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(webrisk "Web Risk API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/")
+google_cloud_cpp_add_gapic_library(webrisk "Web Risk API" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(webrisk_quickstart "quickstart/quickstart.cc")
