--- a/google/cloud/workflows/CMakeLists.txt
+++ b/google/cloud/workflows/CMakeLists.txt
@@ -16,9 +16,8 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(
-    workflows "Workflow Executions API" SERVICE_DIRS "__EMPTY__"
-                                                     "executions/v1/" "v1/")
+google_cloud_cpp_add_gapic_library(workflows "Workflow Executions API"
+                                   SERVICE_DIRS "executions/v1/" "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(workflows_quickstart "quickstart/quickstart.cc")
