--- a/google/cloud/accesscontextmanager/CMakeLists.txt
+++ b/google/cloud/accesscontextmanager/CMakeLists.txt
@@ -17,8 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
-    accesscontextmanager "Access Context Manager API" SERVICE_DIRS "__EMPTY__"
-                                                                   "v1/")
+    accesscontextmanager "Access Context Manager API" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(accesscontextmanager_quickstart "quickstart/quickstart.cc")
