--- a/google/cloud/apikeys/CMakeLists.txt
+++ b/google/cloud/apikeys/CMakeLists.txt
@@ -16,8 +16,7 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(apikeys "API Keys API"
-                                   SERVICE_DIRS "__EMPTY__" "v2/")
+google_cloud_cpp_add_gapic_library(apikeys "API Keys API" SERVICE_DIRS "v2/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(apikeys_quickstart "quickstart/quickstart.cc")
