--- a/google/cloud/automl/CMakeLists.txt
+++ b/google/cloud/automl/CMakeLists.txt
@@ -16,8 +16,7 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(automl "Cloud AutoML API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/")
+google_cloud_cpp_add_gapic_library(automl "Cloud AutoML API" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(automl_quickstart "quickstart/quickstart.cc")
