--- a/google/cloud/contactcenterinsights/CMakeLists.txt
+++ b/google/cloud/contactcenterinsights/CMakeLists.txt
@@ -17,8 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
-    contactcenterinsights "Contact Center AI Insights API"
-    SERVICE_DIRS "__EMPTY__" "v1/")
+    contactcenterinsights "Contact Center AI Insights API" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(contactcenterinsights_quickstart "quickstart/quickstart.cc")
