--- a/google/cloud/dlp/CMakeLists.txt
+++ b/google/cloud/dlp/CMakeLists.txt
@@ -27,7 +27,7 @@ endif ()
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(dlp "Cloud Data Loss Prevention (DLP) API"
-                                   SERVICE_DIRS "__EMPTY__" "v2/")
+                                   SERVICE_DIRS "v2/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(dlp_quickstart "quickstart/quickstart.cc")
