--- a/google/cloud/gkehub/CMakeLists.txt
+++ b/google/cloud/gkehub/CMakeLists.txt
@@ -16,8 +16,7 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(gkehub "GKE Hub" SERVICE_DIRS "__EMPTY__"
-                                                                 "v1/")
+google_cloud_cpp_add_gapic_library(gkehub "GKE Hub" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(gkehub_quickstart "quickstart/quickstart.cc")
