--- a/google/cloud/iap/CMakeLists.txt
+++ b/google/cloud/iap/CMakeLists.txt
@@ -17,7 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(iap "Cloud Identity-Aware Proxy API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/")
+                                   SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(iap_quickstart "quickstart/quickstart.cc")
