--- a/google/cloud/kms/CMakeLists.txt
+++ b/google/cloud/kms/CMakeLists.txt
@@ -16,9 +16,8 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(
-    kms "Cloud Key Management Service (KMS) API"
-    SERVICE_DIRS "__EMPTY__" "inventory/v1/" "v1/")
+google_cloud_cpp_add_gapic_library(kms "Cloud Key Management Service (KMS) API"
+                                   SERVICE_DIRS "inventory/v1/" "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(kms_quickstart "quickstart/quickstart.cc")
