--- a/google/cloud/networkconnectivity/CMakeLists.txt
+++ b/google/cloud/networkconnectivity/CMakeLists.txt
@@ -17,8 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
-    networkconnectivity "Network Connectivity API" SERVICE_DIRS "__EMPTY__"
-                                                                "v1/")
+    networkconnectivity "Network Connectivity API" SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(networkconnectivity_quickstart "quickstart/quickstart.cc")
