--- a/google/cloud/notebooks/CMakeLists.txt
+++ b/google/cloud/notebooks/CMakeLists.txt
@@ -16,8 +16,8 @@
 
 include(GoogleCloudCppLibrary)
 
-google_cloud_cpp_add_gapic_library(notebooks "Notebooks API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/" "v2/")
+google_cloud_cpp_add_gapic_library(notebooks "Notebooks API" SERVICE_DIRS "v1/"
+                                                                          "v2/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(notebooks_quickstart "quickstart/quickstart.cc")
