--- a/google/cloud/redis/CMakeLists.txt
+++ b/google/cloud/redis/CMakeLists.txt
@@ -17,8 +17,8 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
-    redis "Google Cloud Memorystore for Redis API"
-    SERVICE_DIRS "__EMPTY__" "v1/" "cluster/v1/")
+    redis "Google Cloud Memorystore for Redis API" SERVICE_DIRS "v1/"
+                                                                "cluster/v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(redis_quickstart "quickstart/quickstart.cc")
