--- a/google/cloud/storagetransfer/CMakeLists.txt
+++ b/google/cloud/storagetransfer/CMakeLists.txt
@@ -27,7 +27,7 @@ endif ()
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(storagetransfer "Storage Transfer API"
-                                   SERVICE_DIRS "__EMPTY__" "v1/")
+                                   SERVICE_DIRS "v1/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(storagetransfer_quickstart "quickstart/quickstart.cc")
