--- a/google/cloud/talent/CMakeLists.txt
+++ b/google/cloud/talent/CMakeLists.txt
@@ -17,7 +17,7 @@
 include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(talent "Cloud Talent Solution API"
-                                   SERVICE_DIRS "__EMPTY__" "v4/")
+                                   SERVICE_DIRS "v4/")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
     add_executable(talent_quickstart "quickstart/quickstart.cc")
