--- a/google/cloud/texttospeech/CMakeLists.txt
+++ b/google/cloud/texttospeech/CMakeLists.txt
@@ -18,7 +18,7 @@ include(GoogleCloudCppLibrary)
 
 google_cloud_cpp_add_gapic_library(
     texttospeech "Cloud Text-to-Speech API"
-    SERVICE_DIRS "__EMPTY__" "v1/"
+    SERVICE_DIRS "v1/"
     BACKWARDS_COMPAT_PROTO_TARGETS "cloud_texttospeech_protos")
 
 if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
