--- a/generator/integration_tests/CMakeLists.txt
+++ b/generator/integration_tests/CMakeLists.txt
@@ -54,13 +54,8 @@ set_target_properties(google_cloud_cpp_generator_golden_protos
 file(
     GLOB google_cloud_cpp_generator_golden_files
     RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
-    "golden/*.h"
-    "golden/mocks/*.h"
-    "golden/v1/*.h"
-    "golden/v1/internal/*.h"
-    "golden/v1/internal/*_sources.cc"
-    "golden/v1/internal/streaming.cc"
-    "golden/v1/mocks/*.h")
+    "golden/v1/*.h" "golden/v1/internal/*.h" "golden/v1/internal/*_sources.cc"
+    "golden/v1/internal/streaming.cc" "golden/v1/mocks/*.h")
 list(SORT google_cloud_cpp_generator_golden_files)
 
 # Create a library from the where the golden code was copied to.
