--- a/google/cloud/bigtable/tests/CMakeLists.txt
+++ b/google/cloud/bigtable/tests/CMakeLists.txt
@@ -18,14 +18,14 @@
 # Bigtable emulator.
 set(bigtable_client_integration_tests
     # cmake-format: sort
-    admin_backup_integration_test.cc
-    admin_iam_policy_integration_test.cc
-    admin_integration_test.cc
     data_async_future_integration_test.cc
     data_integration_test.cc
     filters_integration_test.cc
     instance_admin_integration_test.cc
     mutations_integration_test.cc
+    table_admin_backup_integration_test.cc
+    table_admin_iam_policy_integration_test.cc
+    table_admin_integration_test.cc
     table_sample_rows_integration_test.cc)
 
 include(CreateBazelConfig)
@@ -67,7 +67,8 @@ google_cloud_cpp_add_common_options(${target})
 # We just know that these tests need to be run against production.
 set(bigtable_integration_tests_production
     # cmake-format: sort
-    admin_backup_integration_test.cc admin_iam_policy_integration_test.cc)
+    table_admin_backup_integration_test.cc
+    table_admin_iam_policy_integration_test.cc)
 
 foreach (fname ${bigtable_integration_tests_production})
     google_cloud_cpp_set_target_name(target "bigtable" "${fname}")
