--- a/google/cloud/bigtable/BUILD.bazel
+++ b/google/cloud/bigtable/BUILD.bazel
@@ -100,7 +100,10 @@ cc_library(
     testonly = True,
     srcs = bigtable_client_testing_srcs,
     hdrs = bigtable_client_testing_hdrs,
-    visibility = ["//visibility:public"],
+    visibility = [
+        ":__subpackages__",
+        "//:__pkg__",
+    ],
     deps = [
         ":google_cloud_cpp_bigtable",
         ":google_cloud_cpp_bigtable_mocks",
