--- a/google/cloud/apiregistry/CMakeLists.txt
+++ b/google/cloud/apiregistry/CMakeLists.txt
@@ -31,5 +31,6 @@ if (BUILD_TESTING AND GOOGLE_CLOUD_CPP_ENABLE_CXX_EXCEPTIONS)
             $<TARGET_FILE:apiregistry_quickstart> GOOGLE_CLOUD_PROJECT
             GOOGLE_CLOUD_CPP_TEST_REGION)
     set_tests_properties(apiregistry_quickstart
-                         PROPERTIES LABELS "integration-test;quickstart")
+                         PROPERTIES LABELS "integration-test;quickstart"
+    PASS_REGULAR_EXPRESSION "Permanent error.*gcloud-cpp.retry.function=ListMcpServers")
 endif ()
