--- a/ci/cloudbuild/triggers/cmake-oldest-deps-pr.yaml
+++ b/ci/cloudbuild/triggers/cmake-oldest-deps-pr.yaml
@@ -23,7 +23,7 @@ includeBuildLogs: INCLUDE_BUILD_LOGS_WITH_STATUS
 name: prepare-for-v3-0-0-cmake-oldest-deps-pr
 substitutions:
   _BUILD_NAME: cmake-oldest-deps
-  _DISTRO: ubuntu-focal
+  _DISTRO: ubuntu-22.04
   _TRIGGER_TYPE: pr
 tags:
 - pr
