--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,7 +16,7 @@
 
 module(
     name = "google_cloud_cpp",
-    version = "3.0.0-rc1",  # Updated by CMake
+    version = "3.0.0",  # Updated by CMake
     compatibility_level = 3,  # Updated by CMake
 )
 
